# dragonsbreath

./: LICENSE  README.md  pyproject.toml
dragonsbreath/: _version.py
dragonsbreath/engines/: ramjet.py
dragonsbreath/thermodynamics/: brayton_cycle.py
scripts/: ramjet_sensitivity.py  ramjet_sweep.py
tests/: test_ramjet_thrust.py
